--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -6,17 +6,112 @@
     android:layout_height="match_parent"
     tools:context=".ui.dashboard.DashboardFragment">
 
-    <TextView
-        android:id="@+id/text_dashboard"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageView
+        android:id="@+id/imageView3r2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/image_description"
+        android:src="@drawable/ic_texture_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2r2"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView2r2"
+        app:layout_constraintTop_toTopOf="@+id/imageView2r2" />
+
+    <ImageView
+        android:id="@+id/imageView1r2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/image_description"
+        android:src="@drawable/ic_texture_black_24dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView2r2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView1r1" />
+
+    <ImageView
+        android:id="@+id/imageView2r1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/image_description"
+        android:src="@drawable/ic_texture_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView1r1"
+        app:layout_constraintEnd_toStartOf="@+id/imageView3r1"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView1r1"
+        app:layout_constraintTop_toTopOf="@+id/imageView1r1" />
+
+    <ImageView
+        android:id="@+id/imageView3r1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/image_description"
+        android:src="@drawable/ic_texture_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2r1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView2r1"
+        app:layout_constraintTop_toTopOf="@+id/imageView2r1" />
+
+    <ImageView
+        android:id="@+id/imageView1r1"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/image_description"
+        android:src="@drawable/ic_texture_black_24dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView2r1"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2r2"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="TODO"
+        android:src="@drawable/ic_texture_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView1r2"
+        app:layout_constraintEnd_toStartOf="@+id/imageView3r2"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView1r2"
+        app:layout_constraintTop_toTopOf="@+id/imageView1r2" />
+
+    <ImageView
+        android:id="@+id/imageView2r3"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/image_description"
+        android:src="@drawable/ic_texture_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView1r3"
+        app:layout_constraintEnd_toStartOf="@+id/imageView3r3"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView1r3"
+        app:layout_constraintTop_toTopOf="@+id/imageView1r3" />
+
+    <ImageView
+        android:id="@+id/imageView1r3"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="16dp"
+        android:contentDescription="@string/image_description"
+        android:src="@drawable/ic_texture_black_24dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageView2r3"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView1r2" />
+
+    <ImageView
+        android:id="@+id/imageView3r3"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:contentDescription="@string/image_description"
+        android:src="@drawable/ic_texture_black_24dp"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2r3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/imageView2r3"
+        app:layout_constraintTop_toTopOf="@+id/imageView2r3" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
