--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -21,5 +21,5 @@
         android:id="@+id/navigation_notifications"
         android:name="codes.malukimuthusi.healthreportapp.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        tools:layout="@layout/fragment_report" />
 </navigation>
