--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="YELLOW_200">#FFF176</color>
+    <color name="RED_A_700">#F44336</color>
+    <color name="GREEN_A_700">#00C853</color>
+    <color name="YELLOW_A_700">#FFD600</color>
 </resources>
