--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="_16dp">16dp</dimen>
     <dimen name="_8dp">8dp</dimen>
+    <dimen name="_4dp">4dp</dimen>
 </resources>
