--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -80,21 +80,62 @@
             </com.google.android.material.chip.ChipGroup>
         </HorizontalScrollView>
 
-        <codes.malukimuthusi.healthreportapp.SingleStatView
+        <LinearLayout
             android:id="@+id/recovered"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            app:icon="@drawable/ic_baseline_favorite_border_24"
-            app:iconColor="@color/GREEN_A_700"
+            android:orientation="vertical"
             app:layout_constraintEnd_toStartOf="@+id/confirmed"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/chips"
-            app:statValue="-"
-            app:title="@string/recovered" />
+            app:title="@string/recovered">
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/stat_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:src="@drawable/ic_baseline_favorite_border_24"
+                android:tint="@color/GREEN_A_700"
+                tools:ignore="ContentDescription" />
+
+            <TextView
+                android:id="@+id/stat_value"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:maxWidth="140dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:singleLine="true"
+                android:text="@{viewModel.recorvered}"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
+                android:textStyle="bold"
+                tools:text="2913415" />
+
+            <TextView
+                android:id="@+id/stat_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                android:ellipsize="end"
+                android:gravity="center"
+                android:maxWidth="120dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:singleLine="true"
+                android:text="@string/recovered" />
+        </LinearLayout>
 
         <codes.malukimuthusi.healthreportapp.SingleStatView
             android:id="@+id/confirmed"
